--- a/index.html
+++ b/index.html
@@ -22,6 +22,213 @@
 </head>
 
 <body>
-    
+    <!-- header -->
+    <header>
+        <div class="logo"><img src="img/logo.png" alt="logo"></div>
+        <div class="hamburger">
+            <i class="fa-solid fa-bars"></i>
+        </div>
+        <nav class="menu">
+            <ul>
+                <li><a href="#">Planning</a></li>
+                <li><a href="#">Testimonials</a></li>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Get Started</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!-- /header -->
+
+    <!-- main -->
+    <main>
+        <!-- services-section -->
+        <section id="services">
+            <div class="container">
+                <div class="row">
+                    <div class="col large">
+                        <div class="card">
+                            <h4>Get a demo application</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat et inventore quaerat recusandae sequi autem mollitia in tempore. Iusto natus modi voluptates doloribus? Modi sapiente laudantium odit nihil nesciunt sunt!</p>
+                            <a href="#">BUTTON</a>
+                            <img src="" alt="">
+                        </div>
+                    </div>
+                    <div class="col small">
+                        <div class="card">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate esse quasi dignissimos consequatur reiciendis, rem culpa doloremque animi. Dicta quos blanditiis temporibus. Corporis vero facere neque libero maiores animi iste?
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate esse quasi dignissimos consequatur reiciendis, rem culpa doloremque animi. Dicta quos blanditiis temporibus. Corporis vero facere neque libero maiores animi iste?
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate esse quasi dignissimos consequatur reiciendis, rem culpa doloremque animi. Dicta quos blanditiis temporibus. Corporis vero facere neque libero maiores animi iste?
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate esse quasi dignissimos consequatur reiciendis, rem culpa doloremque animi. Dicta quos blanditiis temporibus. Corporis vero facere neque libero maiores animi iste?
+                        </div>
+                    </div>
+                </div>    
+            </div>
+        </section>
+        <!-- /services-section -->
+
+        <!-- planning-section -->
+        <section id="planning">
+            <div class="col">
+                <img src="" alt="">
+                <h3>Strategic Planning</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci cum dolorem, officia aliquam laborum quisquam eum numquam magnam nobis aut! Tempora praesentium sequi non saepe inventore? Perspiciatis voluptatem quasi aliquam!</p>
+            </div>
+            <div class="col">
+                <img src="" alt="">
+            </div>
+        </section>
+        <!-- /planning-section -->
+
+        <!-- partners-section -->
+        <section id="partners">
+            <div class="container">
+                <div>
+                    <span>TESTIMONIALS</span>
+                    <h4>We are committed expert partners</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste nobis tenetur voluptate quo totam vel atque tempora vitae cupiditate nesciunt repellendus deleniti, laudantium repellat est alias non placeat quos omnis.</p>
+                </div>
+                <div class="col">
+                    <div>
+                        <img src="" alt="">
+                    </div>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quod, odit facilis ut blanditiis illum magnam nostrum autem sed, quos temporibus, nihil id incidunt ipsam delectus esse consectetur nesciunt suscipit.</p>
+                        <span>Lorem, ipsum dolor.</span>
+                    </div>
+                </div>
+                <div class="col">
+                    <div>
+                        <img src="" alt="">
+                    </div>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quod, odit facilis ut blanditiis illum magnam nostrum autem sed, quos temporibus, nihil id incidunt ipsam delectus esse consectetur nesciunt suscipit.</p>
+                        <span>Lorem, ipsum dolor.</span>
+                    </div>
+                </div>
+                <div class="col">
+                    <div>
+                        <img src="" alt="">
+                    </div>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quod, odit facilis ut blanditiis illum magnam nostrum autem sed, quos temporibus, nihil id incidunt ipsam delectus esse consectetur nesciunt suscipit.</p>
+                        <span>Lorem, ipsum dolor.</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- /partners-section -->
+
+        <!-- with-us -->
+        <section id="with-us">
+            <h4>Benefits of working with us</h4>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <div class="card">
+                            <h4>01</h4>
+                            <h6>Hight Quality</h6>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, minima, doloremque eveniet aspernatur dicta perferendis eum deserunt minus numquam officiis, ea harum quod obcaecati asperiores recusandae? Blanditiis sed exercitationem esse?</p>
+                            <a href="#">BUTTON</a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <h4>01</h4>
+                            <h6>Hight Quality</h6>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, minima, doloremque eveniet aspernatur dicta perferendis eum deserunt minus numquam officiis, ea harum quod obcaecati asperiores recusandae? Blanditiis sed exercitationem esse?</p>
+                            <a href="#">BUTTON</a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <h4>01</h4>
+                            <h6>Hight Quality</h6>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, minima, doloremque eveniet aspernatur dicta perferendis eum deserunt minus numquam officiis, ea harum quod obcaecati asperiores recusandae? Blanditiis sed exercitationem esse?</p>
+                            <a href="#">BUTTON</a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <h4>01</h4>
+                            <h6>Hight Quality</h6>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, minima, doloremque eveniet aspernatur dicta perferendis eum deserunt minus numquam officiis, ea harum quod obcaecati asperiores recusandae? Blanditiis sed exercitationem esse?</p>
+                            <a href="#">BUTTON</a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <h4>01</h4>
+                            <h6>Hight Quality</h6>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, minima, doloremque eveniet aspernatur dicta perferendis eum deserunt minus numquam officiis, ea harum quod obcaecati asperiores recusandae? Blanditiis sed exercitationem esse?</p>
+                            <a href="#">BUTTON</a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <h4>01</h4>
+                            <h6>Hight Quality</h6>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, minima, doloremque eveniet aspernatur dicta perferendis eum deserunt minus numquam officiis, ea harum quod obcaecati asperiores recusandae? Blanditiis sed exercitationem esse?</p>
+                            <a href="#">BUTTON</a>
+                        </div>
+                    </div>                
+                </div>
+            </div>
+        </section>
+        <!-- /with-us -->
+
+        <!-- about-us -->
+        <section id="about-us">
+            <div class="container">
+                <div>
+                    <h4>About us</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis assumenda facere dolorem, modi aspernatur, voluptate quaerat deserunt neque nesciunt explicabo perspiciatis, officia cumque magni architecto minus ex dignissimos necessitatibus excepturi?</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse magnam vero accusamus odio amet, eos earum reiciendis molestiae, quos suscipit sit?</p>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, voluptatum.</span>
+                    <a href="#">BUTTON</a>
+                </div>
+            </div>
+        </section>
+        <!-- /about-us -->
+
+        <!-- get-started -->
+        <section id="get-started">
+            <div class="container">
+                <span>GET STARTED</span>
+                <h4>Simple, Trasparent Pricing</h4>
+                <h2>It's Free!</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio, corporis!</p>
+                <a href="#">BUTTON</a>
+                <span>Copyright Copyright Copyright Copyright Copyright</span>
+            </div>
+        </section>
+        <!-- /get-started -->
+    </main>
+    <!-- /main -->
+
+    <!-- footer -->
+    <section id="footer">
+        <div class="container">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut distinctio non consectetur molestiae, cum ipsum!</p>
+            <span>Lorem ipsum dolor sit amet.</span>
+        </div>
+    </section>
+    <!-- /footer -->
+
 </body>
 </html>
