Add: Services section

--- a/index.html
+++ b/index.html
@@ -50,28 +50,36 @@
                         <div class="card">
                             <h4>Get a demo application</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat et inventore quaerat recusandae sequi autem mollitia in tempore. Iusto natus modi voluptates doloribus? Modi sapiente laudantium odit nihil nesciunt sunt!</p>
-                            <a href="#">BUTTON</a>
-                            <img src="" alt="">
+                            <a class="button" href="#"><i class="fa-brands fa-apple"></i> Apple Store</a>
+                            <img src="img/phone.png" alt="phone">
                         </div>
                     </div>
-                    <div class="col small">
+                    <div id="center" class="col small">
                         <div class="card">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate esse quasi dignissimos consequatur reiciendis, rem culpa doloremque animi. Dicta quos blanditiis temporibus. Corporis vero facere neque libero maiores animi iste?
+                            <i class="fa-solid fa-file-code"></i>
+                            <h4>Clean Code</h4>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias officia nisi explicabo enim inventore odio nobis molestiae similique consequatur ab accusamus nam earum, ex doloribus eos praesentium quisquam debitis fuga. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem maiores nihil aliquid quos ad natus?</p>
                         </div>
                     </div>
-                    <div class="col">
+                    <div id="center" class="col">
                         <div class="card">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate esse quasi dignissimos consequatur reiciendis, rem culpa doloremque animi. Dicta quos blanditiis temporibus. Corporis vero facere neque libero maiores animi iste?
+                            <i class="fa-solid fa-compass-drafting"></i>                            
+                            <h4>Web Design</h4>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium ex, neque reprehenderit ipsa animi repellendus architecto! Quibusdam nemo cumque nulla! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem maiores nihil aliquid quos ad natus?</p>
                         </div>
                     </div>
-                    <div class="col">
+                    <div id="center" class="col">
                         <div class="card">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate esse quasi dignissimos consequatur reiciendis, rem culpa doloremque animi. Dicta quos blanditiis temporibus. Corporis vero facere neque libero maiores animi iste?
+                            <i class="fa-solid fa-laptop-code"></i>
+                            <h4>Development</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo sapiente pariatur corporis delectus, eligendi officiis praesentium molestiae sed asperiores cupiditate. Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique optio nemo sapiente at accusamus molestias.</p>
                         </div>
                     </div>
-                    <div class="col">
+                    <div id="center" class="col">
                         <div class="card">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate esse quasi dignissimos consequatur reiciendis, rem culpa doloremque animi. Dicta quos blanditiis temporibus. Corporis vero facere neque libero maiores animi iste?
+                            <i class="fa-sharp fa-solid fa-bullhorn"></i>
+                            <h4>Branding</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo sapiente pariatur corporis delectus, eligendi officiis praesentium molestiae sed asperiores cupiditate. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati itaque, dicta saepe culpa sint dignissimos!</p>
                         </div>
                     </div>
                 </div>    
