Add: With-us section

--- a/index.html
+++ b/index.html
@@ -90,12 +90,19 @@
         <!-- planning-section -->
         <section id="planning">
             <div class="col">
-                <img src="" alt="">
-                <h3>Strategic Planning</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci cum dolorem, officia aliquam laborum quisquam eum numquam magnam nobis aut! Tempora praesentium sequi non saepe inventore? Perspiciatis voluptatem quasi aliquam!</p>
+                <div class="card">
+                    <img src="img/planning1.png" alt="plan1">
+                    <h3>Strategic Planning</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa eius autem officia labore, deleniti et.</p>
+                </div>
             </div>
             <div class="col">
-                <img src="" alt="">
+                <div class="card white">
+                    <img src="img/planning2.png" alt="plan2">
+                    <h4>App Development</h4>
+                    <p>Develop on-demand app for your delivery business to reach your targeted customers without any interruption. </p>
+                    <a href="#"><i class="fa-solid fa-arrow-down"></i></a>
+                </div>
             </div>
         </section>
         <!-- /planning-section -->
@@ -106,33 +113,33 @@
                 <div>
                     <span>TESTIMONIALS</span>
                     <h4>We are committed expert partners</h4>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste nobis tenetur voluptate quo totam vel atque tempora vitae cupiditate nesciunt repellendus deleniti, laudantium repellat est alias non placeat quos omnis.</p>
+                    <p>We place huge value on strong relationship and have seen the benefit they bring to our business. Customer feedback is vital in helping us to get it right.</p>
                 </div>
                 <div class="col">
-                    <div>
-                        <img src="" alt="">
+                    <div class="first">
+                        <img src="img/testimonial1.jpg" alt="testimonial">
                     </div>
-                    <div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quod, odit facilis ut blanditiis illum magnam nostrum autem sed, quos temporibus, nihil id incidunt ipsam delectus esse consectetur nesciunt suscipit.</p>
-                        <span>Lorem, ipsum dolor.</span>
-                    </div>
-                </div>
-                <div class="col">
-                    <div>
-                        <img src="" alt="">
-                    </div>
-                    <div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quod, odit facilis ut blanditiis illum magnam nostrum autem sed, quos temporibus, nihil id incidunt ipsam delectus esse consectetur nesciunt suscipit.</p>
-                        <span>Lorem, ipsum dolor.</span>
+                    <div class="last">
+                        <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quod, odit facilis ut blanditiis illum magnam nostrum autem sed, quos temporibus, nihil id incidunt ipsam delectus esse consectetur nesciunt suscipit."</p>
+                        <span>Nat Reynolds</span>
                     </div>
                 </div>
                 <div class="col">
-                    <div>
-                        <img src="" alt="">
+                    <div class="first">
+                        <img src="img/testimonial2.jpg" alt="testimonial">
                     </div>
-                    <div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quod, odit facilis ut blanditiis illum magnam nostrum autem sed, quos temporibus, nihil id incidunt ipsam delectus esse consectetur nesciunt suscipit.</p>
-                        <span>Lorem, ipsum dolor.</span>
+                    <div class="last">
+                        <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quod, odit facilis ut blanditiis illum magnam nostrum autem sed, quos temporibus, nihil id incidunt ipsam delectus esse consectetur nesciunt suscipit."</p>
+                        <span>Celia Almeda</span>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="first">
+                        <img src="img/testimonial3.jpg" alt="testimonial">
+                    </div>
+                    <div class="last">
+                        <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quod, odit facilis ut blanditiis illum magnam nostrum autem sed, quos temporibus, nihil id incidunt ipsam delectus esse consectetur nesciunt suscipit."</p>
+                        <span>Bob Roberts</span>
                     </div>
                 </div>
             </div>
@@ -141,7 +148,7 @@
 
         <!-- with-us -->
         <section id="with-us">
-            <h4>Benefits of working with us</h4>
+            <h5>Benefits of working with us</h5>
             <div class="container">
                 <div class="row">
                     <div class="col">
@@ -149,7 +156,7 @@
                             <h4>01</h4>
                             <h6>Hight Quality</h6>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, minima, doloremque eveniet aspernatur dicta perferendis eum deserunt minus numquam officiis, ea harum quod obcaecati asperiores recusandae? Blanditiis sed exercitationem esse?</p>
-                            <a href="#">BUTTON</a>
+                            <a href="#">more</a>
                         </div>
                     </div>
                     <div class="col">
@@ -157,7 +164,7 @@
                             <h4>01</h4>
                             <h6>Hight Quality</h6>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, minima, doloremque eveniet aspernatur dicta perferendis eum deserunt minus numquam officiis, ea harum quod obcaecati asperiores recusandae? Blanditiis sed exercitationem esse?</p>
-                            <a href="#">BUTTON</a>
+                            <a href="#">more</a>
                         </div>
                     </div>
                     <div class="col">
@@ -165,7 +172,7 @@
                             <h4>01</h4>
                             <h6>Hight Quality</h6>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, minima, doloremque eveniet aspernatur dicta perferendis eum deserunt minus numquam officiis, ea harum quod obcaecati asperiores recusandae? Blanditiis sed exercitationem esse?</p>
-                            <a href="#">BUTTON</a>
+                            <a href="#">more</a>
                         </div>
                     </div>
                     <div class="col">
@@ -173,7 +180,7 @@
                             <h4>01</h4>
                             <h6>Hight Quality</h6>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, minima, doloremque eveniet aspernatur dicta perferendis eum deserunt minus numquam officiis, ea harum quod obcaecati asperiores recusandae? Blanditiis sed exercitationem esse?</p>
-                            <a href="#">BUTTON</a>
+                            <a href="#">more</a>
                         </div>
                     </div>
                     <div class="col">
@@ -181,7 +188,7 @@
                             <h4>01</h4>
                             <h6>Hight Quality</h6>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, minima, doloremque eveniet aspernatur dicta perferendis eum deserunt minus numquam officiis, ea harum quod obcaecati asperiores recusandae? Blanditiis sed exercitationem esse?</p>
-                            <a href="#">BUTTON</a>
+                            <a href="#">more</a>
                         </div>
                     </div>
                     <div class="col">
@@ -189,7 +196,7 @@
                             <h4>01</h4>
                             <h6>Hight Quality</h6>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, minima, doloremque eveniet aspernatur dicta perferendis eum deserunt minus numquam officiis, ea harum quod obcaecati asperiores recusandae? Blanditiis sed exercitationem esse?</p>
-                            <a href="#">BUTTON</a>
+                            <a href="#">more</a>
                         </div>
                     </div>                
                 </div>
@@ -206,7 +213,7 @@
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse magnam vero accusamus odio amet, eos earum reiciendis molestiae, quos suscipit sit?</p>
                 </div>
                 <div>
-                    <img src="" alt="">
+                    <img src="img/about.jpg" alt="about-us">
                     <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, voluptatum.</span>
                     <a href="#">BUTTON</a>
                 </div>
