--- a/index.html
+++ b/index.html
@@ -207,15 +207,15 @@
         <!-- about-us -->
         <section id="about-us">
             <div class="container">
-                <div>
+                <div class="text">
                     <h4>About us</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis assumenda facere dolorem, modi aspernatur, voluptate quaerat deserunt neque nesciunt explicabo perspiciatis, officia cumque magni architecto minus ex dignissimos necessitatibus excepturi?</p>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse magnam vero accusamus odio amet, eos earum reiciendis molestiae, quos suscipit sit?</p>
                 </div>
-                <div>
+                <div class="content">
                     <img src="img/about.jpg" alt="about-us">
                     <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, voluptatum.</span>
-                    <a href="#">BUTTON</a>
+                    <a href="#"><i class="fa-solid fa-calendar-days"></i> Find me on LinkedIn</a>
                 </div>
             </div>
         </section>
@@ -228,8 +228,8 @@
                 <h4>Simple, Trasparent Pricing</h4>
                 <h2>It's Free!</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio, corporis!</p>
-                <a href="#">BUTTON</a>
-                <span>Copyright Copyright Copyright Copyright Copyright</span>
+                <a href="#">Get Started</a>
+                <span class="copyright">Copyright 2021 Boolean - Classe XX - Privacy Policy</span>
             </div>
         </section>
         <!-- /get-started -->
